# updatedUI2

./: .gitignore  README.md  SETUP_GUIDE.md  requirements-streamlit.txt  streamlit_app.py
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/src/: app.py
backend/src/agents/: coordinator_agent.py  create_parallel_category_agent.py  output_composer_agent.py  trend_research_agent.py
backend/src/config/: config.yaml  load_config.py  research_config.py
backend/src/models/: session_models.py
backend/src/prompts/: prompts.yml
backend/src/routers/: discover_trends.py  trends_db.py
backend/src/utils/: callbacks.py  file_output.py  insert_trends_to_csv.py  prompt_loader.py  service.py  setup_log.py
backend/tests/agents/: list_trends.py  test_individual.py  test_new_import.py
